--- a/.github/workflows/Planning-Garden.yml
+++ b/.github/workflows/Planning-Garden.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d') Planning-Garden"
       - name: Execute commands
         run: sh ./task.sh ${{ steps.date.outputs.date }}
       - name: Commit files
