--- a/.github/workflows/planting-grass.yml
+++ b/.github/workflows/planting-grass.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set current date
         id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d') planting-grass"
       - name: Execute commands
         run: sh ./task.sh ${{ steps.date.outputs.date }}
       - name: Commit files
