--- a/.github/workflows/Grass1.yml
+++ b/.github/workflows/Grass1.yml
@@ -1,27 +1,27 @@
-# name: Grass1
+name: Grass1
 
-# on:
-#   schedule:
-#     - cron: '0 0 * * *'
+on:
+  schedule:
+    - cron: '0 0 */2 * *'  # 이틀마다 00:00 UTC에 실행
 
-# jobs:
-#   task:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - name: Set current date
-#         id: date
-#         run: echo "::set-output name=date::$(date +'%Y-%m-%d') Grass1"
-#       - name: Execute commands
-#         run: sh ./task.sh ${{ steps.date.outputs.date }}
-#       - name: Commit files
-#         run: |
-#           git config --global user.name "$(git --no-pager log --format=format:'%an' -n 1)"
-#           git config --global user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
-#           git add date.txt
-#           git commit -m "Update date to ${{ steps.date.outputs.date }}"
-#       - name: Push changes
-#         uses: ad-m/github-push-action@master
-#         with:
-#           github_token: ${{ secrets.GITHUB_TOKEN }}
-#           branch: ${{ github.ref }}
+jobs:
+  task:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d') Grass1"
+      - name: Execute commands
+        run: sh ./task.sh ${{ steps.date.outputs.date }}
+      - name: Commit files
+        run: |
+          git config --global user.name "$(git --no-pager log --format=format:'%an' -n 1)"
+          git config --global user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
+          git add date.txt
+          git commit -m "Update date to ${{ steps.date.outputs.date }}" || echo "No changes to commit"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
